sys-course-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sys-course-service
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: sys-course
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
