sys-course-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sys-course-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sys-course-service
            port:
              number: 5000
